# LibGizmo

./: .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  camera.h  engine.cpp  engine.h  example.cpp  gizmo.h  main.cpp  renderer.cpp  renderer.h  scene.h  shader.h  shape.h  utils.h
src/: GizmoTransform.cpp  GizmoTransform.h  GizmoTransformMove.cpp  GizmoTransformMove.h  GizmoTransformRender.cpp  GizmoTransformRender.h  GizmoTransformRotate.cpp  GizmoTransformRotate.h  GizmoTransformScale.cpp  GizmoTransformScale.h  ZBaseMaths.cpp  ZBaseMaths.h  ZCollisionsUtils.h  ZMathsFunc.cpp  ZMathsFunc.h
vendors/: CMakeLists.txt
